--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^3.7.2",
     "gh-pages": "^2.2.0",
+    "primereact": "^9.2.0",
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-audio-player": "^0.17.0",
     "react-audio-voice-recorder": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
+    "react-loading-screen": "^0.0.17",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
